# Indigenous-Langugage-Vitality-Webscraper

./: .pre-commit-config.yaml  Native_Lang.ipynb  README.md  main.py  pyproject.toml
app/: main.py  test_main.py
app/modules/: module.py
app/tests/: test_main.py
units_tests/: test_main.py
