[project]
name = "native-langs-percents"
version = "0.1.0"
description = "native language percents"
authors = [
    {name = "Ian-TWhatley",email = "ian.tatlowwhatley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml (>=6.0.1,<7.0.0)",
    "html5lib (>=1.1,<2.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "streamlit (>=1.49.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
